tests/core/snapshots/test-expr-scalar-as-string.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "entry": {
        "num": "0",
        "arr": [
          1,
          2,
          3
        ],
        "str": "test",
        "obj": {
          "e": 1
        },
        "bool": true,
        "nested": {
          "num": 0,
          "arr": [
            1,
            2,
            3
          ],
          "str": "test",
          "obj": {
            "e": 1
          },
          "bool": true
        }
      }
    }
  }
}
