tests/core/snapshots/test-expr-scalar-as-string.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Entry {
  arr: String
  bool: String
  nested: Nested
  num: String
  obj: String
  str: String
}

type Nested {
  arr: String
  bool: String
  num: String
  obj: String
  str: String
}

type Query {
  entry: Entry
}

schema {
  query: Query
}
