tests/core/snapshots/test-expr-with-add-field.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Cannot add field",
    "trace": [
      "tests/execution/test-expr-with-add-field.md 5#12"
    ],
    "description": "Path: [post, user, name] contains resolver expr at [Post.user]"
  }
]
