tests/core/snapshots/test-expr-with-inline.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Cannot add field",
    "trace": [
      "@addField"
    ],
    "description": "Path: [post, user, name] contains resolver expr at [Post.user]"
  }
]
