tests/core/snapshots/test-expr-with-mustache.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type A {
  a: Int
  bc: BC
}

type BC {
  b: [Int]
  c: String
  d: Int
  f: D
  g: Boolean
}

scalar Bytes

type D {
  e: Int
}

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  a: A
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
