tests/core/snapshots/test-expr.md_client.snap
---
source: tests/core/spec.rs
expression: client
---
scalar BigInt

scalar Bytes

scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  hello: String
}

scalar UnsignedInt

scalar Url

schema {
  query: Query
}
