tests/core/snapshots/test-field-already-implemented-from-Interface.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of unknown field `baseURL`, expected one of `onRequest`, `url`, `body`, `encoding`, `batchKey`, `headers`, `input`, `method`, `output`, `query`, `dedupe`, `select`",
    "trace": [
      "Query",
      "user",
      "@http",
      "baseURL"
    ],
    "description": null
  }
]
